--- a/bookinfo/virtual-service-details-delta-gamma-std.yaml
+++ b/bookinfo/virtual-service-details-delta-gamma-std.yaml
@@ -1,15 +1,28 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: ratings
+  name: details
 spec:
   hosts:
-  - ratings
+  - details
   http:
   - match:
     - headers:
         end-user:
-          exact: beta
+          exact: gamma
+    fault:
+      abort:
+        percentage:
+          value: 100.0
+        httpStatus: 500
+    route:
+    - destination:
+        host: details
+        subset: v1
+  - match:
+    - headers:
+        end-user:
+          exact: delta
     fault:
       delay:
         percentage:
@@ -17,9 +30,9 @@ spec:
         fixedDelay: 7s
     route:
     - destination:
-        host: ratings
+        host: details
         subset: v1
   - route:
     - destination:
-        host: ratings
+        host: details
         subset: v1
