--- a/bookinfo/virtual-service-reviews-alpha-beta-std.yaml
+++ b/bookinfo/virtual-service-reviews-alpha-beta-std.yaml
@@ -1,25 +1,28 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: ratings
+  name: reviews
 spec:
   hosts:
-  - ratings
+  - reviews
   http:
   - match:
     - headers:
         end-user:
-          exact: beta
-    fault:
-      delay:
-        percentage:
-          value: 100.0
-        fixedDelay: 7s
+          exact: alpha
     route:
     - destination:
-        host: ratings
-        subset: v1
+        host: reviews
+        subset: v3
+  - match:
+    - headers:
+        end-user:
+          exact: beta
+    route:
+    - destination:
+        host: reviews
+        subset: v2
   - route:
     - destination:
-        host: ratings
+        host: reviews
         subset: v1
